# eebook-users

./: .coveragerc  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  404.html  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  index.html  mkdocs.yml  mypy.ini  objects.inv  package-lock.json  package.json  pyproject.toml  setup.py  sitemap.xml
LICENCE/: index.html
api/: index.html
api/python/adapters/factory/: index.html
api/python/adapters/interfaces/: index.html
api/python/adapters/orm/: index.html
api/python/adapters/password_hasher/: index.html
api/python/adapters/repository/: index.html
api/python/adapters/vault_client/: index.html
api/python/bootstrap/: index.html
api/python/config/loader/: index.html
api/python/config/settings/: index.html
api/python/domain/model/: index.html
api/python/entity/models/: index.html
api/python/entrypoints/fastapi_app/: index.html
api/python/infrastructure/lifespan/: index.html
api/python/infrastucture/lifespan/: index.html
api/python/repository/: index.html
api/python/serivce_layer/dependencies/: index.html
api/python/serivce_layer/uow/: index.html
api/python/service_layer/dependencies/: index.html
api/python/settings/: index.html
api/python/unit_of_work/: index.html
api/python/vault_client/: index.html
api/rest/: index.html
architecture/components/: index.html
architecture/sequence/: index.html
changelog/: index.html
css/: landing.css
deployment/: .env.example  Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml
deployment/entrypoints/: app.sh
docs/: LICENCE.md  api.md  changelog.md  index.md
docs/api/python/: bootstrap.md  unit_of_work.md
docs/architecture/: components.md
docs/css/: extra.css
docs/faq/: architecture.md  coding_guidelines.md  contributing.md  git_commits.md  index.md  testing.md
docs/installation/: guide.md
docs/troubleshooting/: start.md
faq/: index.html
faq/architecture/: index.html
faq/coding_guidelines/: index.html
faq/contributing/: index.html
faq/git_commits/: index.html
faq/testing/: index.html
installation/guide/: index.html
overrides/: main.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/LICENCE/: index.html
site/api/: index.html
site/api/rest/: index.html
site/architecture/components/: index.html
site/architecture/sequence/: index.html
site/changelog/: index.html
site/faq/: index.html
site/faq/architecture/: index.html
site/faq/coding_guidelines/: index.html
site/faq/contributing/: index.html
site/faq/git_commits/: index.html
site/faq/testing/: index.html
site/installation/guide/: index.html
site/overrides/: main.html
site/search/: search_index.json
site/troubleshooting/start/: index.html
src/: app_factory.py  bootstrap.py  config.py  exceptions.py
src/adapters/: abc_classes.py  abc_repository.py  clock.py  factory.py  interfaces.py  orm.py  password_hasher.py  repository.py  time_provider.py  vault.py  vault_secrets_provider.py
src/adapters/auth/: jwt_backend.py
src/adapters/exceptions/: vault_exceptions.py
src/application/: __init__.py  auth_service.py  dependencies.py  exceptions.py  uow.py  user_service.py  utils.py
src/config/: exceptions.py  loader.py  settings.py
src/domain/: model.py
src/domain/exceptions/: exceptions.py
src/entity/: models.py
src/entrypoints/: create_app.py  create_app_sync.py  fastapi_app.py
src/entrypoints/api/: endpoints.py  exceptions.py
src/infrastructure/: lifespan.py
src/infrastructure/auth/: abc.py  token_store.py
src/infrastructure/clients/: __init__.py  subscriptions.py
src/infrastructure/database/: engine.py  exceptions.py  orm.py
src/infrastructure/logging/: context.py  logger.py
src/infrastructure/messaging/: rabbit.py
src/infrastructure/middleware/: cors.py  request_context.py
src/interfaces/: __init__.py
src/interfaces/api/: endpoints.py  exception_handlers.py  schemas.py
src/schemas/api/: auth.py  users.py
src/schemas/internal/: auth.py  role.py  subscription.py
src/service_layer/: auth_service.py  dependencies.py  uow.py  users_service.py  users_subscription_service.py  utils.py
src/service_layer/exceptions/: exceptions.py
src/utils/: auth_events.py  get_current_user.py
tests/: conftest.py  pytest.ini
tests/unit/: test_domain.py  test_repository.py  test_services.py  test_test.py  test_uow.py  test_vault.py
troubleshooting/start/: index.html
(+66 files in other folders)
